Issue #15: Fixed `shopping-cart-list`: adaptive columns (width, visiblity, buttons), in-ctock column, `page-cart-items`: adedptive styles: crop wide texts to block width, fixed `mosaic-banner` styles, made footer scetion nerrow (non-full width background color).

--- a/src/css/mosaic-banner.css
+++ b/src/css/mosaic-banner.css
@@ -131,7 +131,7 @@
 }
 @media all and (max-width: 991px) {
   .mosaic-holder .mosaic-banner {
-    margin: 15px;
+    /* margin: 15px; */
   }
 }
 @media (max-width: 460px) {
