--- a/src/css/section-copyright.css
+++ b/src/css/section-copyright.css
@@ -2,6 +2,7 @@
   .container {
     display: flex;
     align-items: center;
+    background-color: #e0e1e0;
     .copyright-links {
     }
   }
