--- a/src/css/shopping-cart.css
+++ b/src/css/shopping-cart.css
@@ -4,10 +4,40 @@
   }
 }
 #shopping-cart-list {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: stretch;
+  table {
+    flex: 1;
+    .desc {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      > * {
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+  }
   .actions {
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     gap: 10px;
+    button {
+      white-space: nowrap;
+      /* overflow: hidden; */
+      /* text-overflow: ellipsis; */
+      @media (max-width: 768px) {
+        /* Show only icon */
+        max-width: 36px;
+        color: transparent;
+        padding-left: 9px;
+        &::before {
+          color: white;
+        }
+      }
+    }
     .close-btn {
       display: flex;
       align-items: center;
@@ -20,6 +50,56 @@
       font-size: 20px;
       width: 20px;
       height: 20px;
+      color: var(--primary-color);
+      &:hover {
+        text-decoration: none;
+        color: var(--primary-color-dark);
+      }
     }
   }
+
+  /* Adjust table... */
+
+  th > div {
+    white-space: nowrap;
+  }
+
+  .col-preview { width: 10em; }
+  /* .col-product { width: 8em; } */
+  .col-price { width: 8em; }
+  .col-inStock { width: 7em; }
+  .col-quantity { width: 8em; }
+  .col-total { width: 8em; }
+  .col-actions { width: 10em; }
+
+  .col-product h3 {
+    text-transform: none;
+  }
+
+  .col-inStock,
+  .col-price,
+  .col-total {
+    text-align: center;
+  }
+
+  /* Customize columns for mobile devices */
+  @media (max-width: 992px) {
+    .col-inStock { width: 6em; }
+    .col-price { width: 6em; }
+    .col-total { width: 6em; }
+  }
+  @media (max-width: 768px) {
+    /* .col-preview, */
+    .col-inStock {
+      display: none;
+    }
+    .col-preview { width: 6em; }
+    .col-actions { width: 5em; }
+  }
+  @media (max-width: 520px) {
+    .col-preview {
+      display: none;
+    }
+  }
+
 }
